--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "puppeteer": "^24.11.1"
+    "puppeteer": "^24.11.1",
+    "puppeteer-core": "10",
+    "chrome-aws-lambda": "10"
   }
 }
